sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not enough arguments for method getValue: (x$1: Int)Int.
Unspecified value parameter x$1.
		for(i<- 0 to (getValue()-2))
                                      ^