sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var  swapped:Boolean=false;
	while(swapped){
		swapped=false;
		for(i<- 0 to (getValue()-2))
			if(isSmallerThan(i+1,i)){
				swap(i,i+1);
				swapped=false;
			}
	}	
}
